# ysosv2

./: Cargo.toml
0x02/: Cargo.toml  lab1.typ
0x02/base/GZ-Typst-Templates/: README.md  usage.typ
0x02/esp/: KERNEL.ELF
0x02/esp/EFI/BOOT/: BOOTX64.EFI
0x02/pkg/boot/src/: lib.rs  main.rs
0x02/pkg/kernel/: Cargo.toml
0x02/pkg/kernel/config/: x86_64-unknown-none.json
0x02/pkg/kernel/src/: lib.rs  main.rs
0x03/: Cargo.toml
0x03/esp/: KERNEL.ELF
0x03/esp/EFI/BOOT/: BOOTX64.EFI
0x03/pkg/kernel/: Cargo.toml
0x04/: Cargo.toml  Makefile
0x04/esp/: KERNEL.ELF
0x04/esp/APP/: fab  hello  sh
0x04/pkg/lib/: Cargo.toml
0x05/esp/: KERNEL.ELF
0x05/esp/APP/: counter  hello  md  sh  sleep
0x06/: README.md
0x06/0x02/: Cargo.toml  Makefile
0x06/0x03/: Cargo.toml
0x06/0x04/: Cargo.toml
0x06/0x05/: Cargo.toml
0x06/0x05/esp/: NvVars
0x06/esp/: KERNEL.ELF
0x06/esp/APP/: fab  fork_test  hello  sleep
0x07/: Makefile
0x07/esp/: KERNEL.ELF
0x07/pkg/kernel/: Cargo.toml
0x07/pkg/kernel/.cargo/: config.toml
0x07/pkg/kernel/config/: boot.conf
0x07/pkg/kernel/src/: lib.rs
0x07/pkg/kernel/src/drivers/ata/: bus.rs
0x07/pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
0x07/pkg/kernel/src/memory/: frames.rs
0x07/pkg/kernel/src/proc/: data.rs  manager.rs  mod.rs  pid.rs  process.rs  sync.rs
0x07/pkg/kernel/src/proc/vm/: heap.rs  mod.rs  stack.rs
0x07/pkg/lib/: Cargo.toml
0x07/pkg/syscall/: Cargo.toml
esp/: hello.txt
esp/APP/: counter  md  sh
pkg/app/fork_test/: Cargo.toml
pkg/kernel/src/: lib.rs
pkg/lib/src/: syscall.rs
(+138 files in other folders)
