[package]
name = "ysos_kernel"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true }
uefi = { workspace = true }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
libm = { workspace = true }
linked_list_allocator = "0.10.5"
lazy_static.workspace = true
bit_field = "0.10.2"
crossbeam-queue.workspace = true
volatile = "0.6.1"
elf.workspace = true
xmas-elf.workspace = true
syscall_def.workspace = true
storage.workspace = true
chrono.workspace = true
